// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot children is not allowed 1`] = `
<span
  class="custom-class"
  data-name="yozora-text"
  style="color:orange"
>
  Hello, world!
</span>
`;

exports[`snapshot custom 1`] = `
<span
  class="custom-class"
  data-name="yozora-text"
  style="color:orange"
>
  Hello, world!
</span>
`;

exports[`snapshot default 1`] = `
<span
  class="yozora-text"
>
  Hello, world!
</span>
`;
